apps/aws-trivia/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-trivia
spec:
  type: ClusterIP
  selector:
    app: aws-trivia
  ports:
    - name: http
      port: 80
      targetPort: 8000
